--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="dajeo portfolio">
+    <meta property="og:site_name" content="dajeo">
+    <meta property="og:title" content="danil dajeo">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dajeo.by/">
+    <meta property="og:image" content="https://dajeo.by/og.jpg">
+    <meta property="og:description" content="I'm a young software engineer. Develop high-load services in Golang. Analysis and optimizing code.">
     <title>dajeo</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
