--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="dajeo portfolio">
-    <meta property="og:site_name" content="dajeo">
-    <meta property="og:title" content="danil dajeo">
+    <meta property="og:title" content="dajeo">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dajeo.by/">
     <meta property="og:image" content="https://dajeo.by/og.jpg">
