Remove back arrow Add header Change background

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dajeo.by/">
     <meta property="og:image" content="https://dajeo.by/og.jpg">
-    <meta property="og:description" content="I'm a young software engineer. Develop high-load services in Golang. Analysis and optimizing code.">
+    <meta property="og:description" content="Hi, my name is Danil (dajeo). I'm a young software engineer. Develop high-load services in Golang. Analysis and optimizing code.">
     <title>dajeo</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
